[package]
name = "agenttop"
version = "0.1.0"
edition = "2024"
description = "htop for AI coding agents - terminal observability dashboard"
authors = ["tech4242"]
license = "MIT"
repository = "https://github.com/tech4242/agenttop"
keywords = ["ai", "observability", "tui", "opentelemetry", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server for OTLP
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Database
duckdb = { version = "1.2", features = ["bundled"] }

# Protobuf for OTLP
prost = "0.13"
prost-types = "0.13"
opentelemetry-proto = { version = "0.29", features = ["gen-tonic-messages", "logs", "metrics"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
regex = "1"

# Build dependencies for protobuf
[build-dependencies]
prost-build = "0.13"

[profile.release]
strip = true

# Full optimization profile for distribution (CD only)
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
